--- a/WebContent/WEB-INF/topbar.xhtml
+++ b/WebContent/WEB-INF/topbar.xhtml
@@ -51,7 +51,7 @@ a:hover {
 				<ul>
 
 					<li role="menuitem"><a
-						href="#{facesContext.externalContext.requestContextPath}/cadastro/alterarSenha.xhtml.jsf?faces-redirect=true">
+						href="#{facesContext.externalContext.requestContextPath}/cadastro/alterarSenha.jsf?faces-redirect=true">
 							<i class="fa fa-fw fa-user"></i> <span style="font-size: 15px;">Alterar
 								Senha</span>
 					</a></li>
