--- a/WebContent/cadastro/cadFornecedor.xhtml
+++ b/WebContent/cadastro/cadFornecedor.xhtml
@@ -8,7 +8,7 @@
 	xmlns:util="http://java.sun.com/jsf/composite/componentes"
 	xmlns:p="http://primefaces.org/ui" template="/WEB-INF/template.xhtml">
 
-	<ui:define name="title">Cadastro de Material</ui:define>
+	<ui:define name="title">Cadastro de Fornecedor</ui:define>
 
 	<ui:define name="head">
 		<style>
