--- a/WebContent/cadastro/findDoenca.xhtml
+++ b/WebContent/cadastro/findDoenca.xhtml
@@ -8,7 +8,7 @@
 	xmlns:util="http://java.sun.com/jsf/composite/componentes"
 	xmlns:p="http://primefaces.org/ui" template="/WEB-INF/template.xhtml">
 	
-	<ui:define name="title">Find Doença</ui:define>
+	<ui:define name="title">Busca Doença</ui:define>
 
 	<ui:define name="content">
 		<div class="ui-g">
