contas a receber adicionado

--- a/WebContent/WEB-INF/menu.xhtml
+++ b/WebContent/WEB-INF/menu.xhtml
@@ -115,7 +115,8 @@
 									</p:submenu>
 									<p:submenu id="submenu_financeiro_receber"
 										label="Contas a Receber" icon="fa fa-group">
-										<p:menuitem id="item_menu_receber_consultas"
+										<p:menuitem id="item_menu_receber_consultas" 
+										action="#{contasReceberBean.redirecionarFindEntidade}"
 											value="Receber Consultas" icon="fa fa-glass" />
 									</p:submenu>
 								</p:submenu>
