--- a/WebContent/cadastro/cadEspecialidade.xhtml
+++ b/WebContent/cadastro/cadEspecialidade.xhtml
@@ -12,136 +12,135 @@
 	<ui:define name="title">Cadastro de Especialidade</ui:define>
 
 	<ui:define name="head">
-		<style type="text/css">
-.ui-panelgrid.form-elements .ui-grc-2 {
-	padding-left: 80px;
-}
-
-@media ( max-width :1024px) {
-	.ui-panelgrid.form-elements .ui-grc-2 {
-		padding-left: 20px;
-	}
-}
-
-@media ( max-width :640px) {
-	.ui-panelgrid.form-elements .ui-grc-2 {
-		padding-left: 6px;
-	}
-}
-
-.ui-lg-1 {
-	padding-top: 10px !important;
-	text-align: justify;
-}
-
-.ui-lg-2 {
-	width: 150px;
-}
-
-.ui-lg-3 {
-	position: left;
-}
-
-.ui-lg-1 label {
+		<style>
+.ui-g label {
+	font-size: medium;
 	color: #2e6e9e;
 	font-weight: bold;
 }
 
-.label {
+.ui-fluid .ui-inputmask {
+	font-size: 20px;
+	width: 100%;
+	text-align: center;
+	height: 35px;
+	color: black;
+}
+
+.ui-fluid .ui-inputtext {
+	width: 100%;
+	height: 35px;
+	font-size: large;
+	text-align: center;
+	color: black;
+}
+
+.ui-fluid .ui-inputtextarea {
+	width: 100%;
+	height: 35px !important;
+	color: black;
+	text-align: center;
+}
+
+.ui-selectcheckboxmenu-multiple-container.ui-inputfield {
+	padding: 0 22px 0 0;
+	border: 0;
+	height: 35px !important;
+}
+
+.ui-fluid .ui-calendar, .ui-fluid .ui-calendar input {
+	width: 100%;
+	height: 35px;
+	font-size: 20px !important;
+	text-align: center;
+	color: black;
+}
+
+.ui-selectonemenu label.ui-selectonemenu-label {
+	cursor: pointer;
+	height: 33px;
+	font-size: 20px;
+	text-align: center;
+	color: black;
+}
+
+.subtitulo {
+	font-weight: bold;
+	font-size: 20px !important;
+	color: black !important;
+}
+/*CAMPOS OBRIGATÓRIOS(*) */
+.obrigatorio {
 	font-weight: bold !important;
-	width: 20%;
-	padding: 4px;
+	font-size: 10px !important;
+	color: red !important;
 }
 
-.value {
-	width: 60%;
-	padding: 4px;
+.ui-panel {
+	padding: 0.2em;
+	border-radius: 15px;
 }
 
-.estilo100 {
-	width: 100% !important;
+.ui-panel .ui-panel-title {
+	
 }
 </style>
+}
 	</ui:define>
 
 
 	<ui:define name="content">
 
-		<h:form id="formEspecialidade" prependId="false">
-		<div align="center">
-				<br />
-				<p:outputLabel value="Cadastro de Especialidade"
-					styleClass="estiloLabelCadastroIdentificacao" />
-				<br /> <br />
-			</div>
+		<h:form id="form">
 			<div class="ui-fluid">
 				<div class="ui-g">
 					<div class="ui-g-12">
 						<div class="card card-w-title">
-							<p:tabView orientation="top">
-								<p:tab title="Unidade De Medida">
-									<p:messages />
-									<p:panelGrid id="gridEspecialidade" columns="2" 
-									styleClass="ui-panelgrid-blank form-group form-elements" layout="grid"
-									 style="border:0px none; background-color:transparent;"
-									columnClasses="ui-g-12 ui-md-6 ui-lg-2,
-												   ui-g-12 ui-md-6 ui-lg-3,
-												   ui-g-12 ui-md-6 ui-lg-2,
-												   ui-g-12 ui-md-6 ui-lg-3">
-
-										<!-- Label Nome da Especialidade -->
-										<h:outputLabel 
-											 value="Especialidade:*" />
-
-										<!-- Input Nome da Especialidade -->
-										<p:inputText id="especialidadeNome"
-											styleClass="estiloInputNome" required="true" maxlength="100"
-											value="#{especialidadeBeanView.objetoSelecionado.nomeEspecialidade}"
-											requiredMessage="Informe a Especialidade" >
-											
-										<p:ajax event="change" listener="#{medicoBeanView.getEspecialidadesUpdate}" update="especialidadeNome" /> 	
+							<br />
+							<p:panel>
+								<br />
+								<div align="center">
+									<p:outputLabel value="Cadastro de Especialidade"
+										styleClass="titulo" />
+								</div>
+								<br />
+								<div align="center">
+									<util:botoesCrud managedBeanView="#{especialidadeBean}"
+										camposReload=":formTemplate:msg, form"
+										botaoNovo="#{contextoBean.possuiAcesso('ADMIN')}"
+										botaoSalvar="#{contextoBean.possuiAcesso('ADMIN') 
+												 and especialidadeBean.especialidadeModel.idEspecialidade == null}"
+										botaoAtualizar="#{contextoBean.possuiAcesso('ADMIN') 
+												 and especialidadeBean.especialidadeModel.idEspecialidade != null}"
+										botaoRedirecionar="#{contextoBean.possuiAcesso('ADMIN')}"
+										botaoExcluir="false">
+									</util:botoesCrud>
+								</div>
+								<br />
+								<p:outputLabel value="Campos Obrigatórios()"
+									styleClass="obrigatorio" />
+								<p:separator />
+								<br />
+								<div class="ui-g">
+									<div class="ui-g-12 ui-lg-4">
+										<h:outputLabel value="Especialidade:*" />
+										<p:inputText id="especialidadeNome" required="true"
+											value="#{especialidadeBean.especialidadeModel.nomeEspecialidade}"
+											requiredMessage="Informe a Especialidade">
 										</p:inputText>
-
-										<!-- Label OBSERVAÇÃO -->
-										<h:outputLabel id="labelObservacaoEspecialidade"
-											for="observacaoEspecialidade" value="Obs:" />
-
-										<!-- Input OBSERVAÇÃO -->
-										<p:inputText id="observacaoEspecialidade"
-											styleClass="estiloInputNome"
-											value="#{especialidadeBeanView.objetoSelecionado.observacao}" />
-
-									</p:panelGrid>
-
-									<div class="espacoBranco" align="center">
-
-										<!-- Chama Botões  Recarrega Template growl messages e tabela de resultados-->
-										<util:botoesCrud managedBeanView="#{especialidadeBeanView}"
-											camposReload=":formTemplate:msg, formEspecialidade"
-											botaoNovo="#{contextoBean.possuiAcesso('ESPECIALIDADE_NOVO', 'ADMIN')}"
-											botaoSalvar="#{contextoBean.possuiAcesso('ESPECIALIDADE_NOVO', 'ADMIN')
-					 							and especialidadeBeanView.objetoSelecionado.idEspecialidade == null}"
-											botaoAtualizar="#{contextoBean.possuiAcesso('ESPECIALIDADE_EDITAR', 'ADMIN') 
-												 and especialidadeBeanView.objetoSelecionado.idEspecialidade != null}"
-											botaoRedirecionar="#{contextoBean.possuiAcesso('ACESSO_REDIRECIONAR', 'ADMIN')}"
-											botaoExcluir="false">
-										</util:botoesCrud>
-
 									</div>
-								</p:tab>
-							</p:tabView>
+									<div class="ui-g-12 ui-lg-8">
+										<h:outputLabel value="Observação:" />
+										<p:inputText
+											value="#{especialidadeBean.especialidadeModel.observacao}" />
+									</div>
+								</div>
+							</p:panel>
 						</div>
 					</div>
 				</div>
 			</div>
 		</h:form>
-
-		<!-- JavaScript de Foco no Nome da especialidade  Configuração do Enter  -->
-		<script type="text/javascript" charset="UTF-8">
-			addFocoCampo("nomeEspecialidade");
-			gerenciaTeclaEnter();
-		</script>
-
 	</ui:define>
 </ui:composition>
 
