--- a/WebContent/cadastro/findMaterial.xhtml
+++ b/WebContent/cadastro/findMaterial.xhtml
@@ -7,7 +7,7 @@
 	xmlns:util="http://java.sun.com/jsf/composite/componentes"
 	xmlns:p="http://primefaces.org/ui" template="/WEB-INF/template.xhtml">
 
-	<ui:define name="title">Busca Atendente</ui:define>
+	<ui:define name="title">Busca Material</ui:define>
 	<ui:define name="head">
 		<style>
 .ui-g label {
