--- a/WebContent/prontuario/prontuarioMedico.xhtml
+++ b/WebContent/prontuario/prontuarioMedico.xhtml
@@ -6,7 +6,7 @@
 	xmlns:util="http://java.sun.com/jsf/composite/componentes"
 	template="/WEB-INF/template.xhtml">
 
-	<ui:define name="title">Cadastro de Atendente</ui:define>
+	<ui:define name="title">Prontuário Médico</ui:define>
 
 	<ui:define name="head">
 
