--- a/WebContent/restrito/dashboard.xhtml
+++ b/WebContent/restrito/dashboard.xhtml
@@ -8,9 +8,6 @@
 	<ui:define name="title">Pagina Inicial</ui:define>
 
 	<ui:define name="head">
-		<!-- <h:outputScript name="scripty.js" library="javascript"
-			id="jsScriptSistema" /> -->
-
 
 		<style type="text/css">
 .emp1 {
@@ -154,11 +151,9 @@ esti {
 			<p:growl id="avisosGrowl" />
 			<p:dialog widgetVar="eventDialog" id="eventDialog" responsive="true"
 				dynamic="true" resizable="true" closable="true" showEffect="true"
-				modal="true" width="580">
-				
-				
-				 <p:hotkey bind="esc" handler="PF('eventDialog').hide();" />
-				<p:panelGrid columns="1" layout="grid"
+				modal="true" width="580" header="Atendente/Usuario : #{loginBean.usuarioLogadoSecurity}" >
+				<p:hotkey bind="esc" handler="PF('eventDialog').hide();" />
+				<p:panelGrid columns="1" layout="grid" 
 					styleClass="ui-panelgrid-blank">
 
 					<p:outputLabel value="Titulo:" rendered="false" />
@@ -170,6 +165,19 @@ esti {
 						rendered="false" value="#{scheduleBean.evento.descricao}"
 						style="width: 242px" />
 
+					<p:panelGrid columns="1" 
+						columnClasses="ui-g-6">
+						<p:column>
+							<p:outputLabel value="Data de Pagamento" />
+							<p:calendar mindate="today"
+ 								value="#{scheduleBean.evento.dataVencimentoContasReceber}" 
+ 								locale="pt_BR" autocomplete="true" popupIconOnly="true"
+								required="true" 
+								requiredMessage="Informe uma data Fim para o Agendamento"
+								showButtonPanel="true" showTodayButton="false" 
+								timeZone="GMT-3" pattern="dd/MM/yyyy"/>
+						</p:column>
+					</p:panelGrid>
 					<p:outputLabel value="Paciente" />
 					<p:column>
 						<p:autoComplete id="paciente"
@@ -230,7 +238,7 @@ esti {
 					<p:column style="text-align:center">
 
 						<p:outputLabel value="Agendamento:" />
-						<br/>
+						<br />
 						<p:selectOneRadio value="#{scheduleBean.evento.tipoEvento}"
 							styleClass="inputAgenda" required="true" style="width : 100%"
 							requiredMessage="Informe um tipo de agendamento">
@@ -238,7 +246,7 @@ esti {
 								var="tipoEvento" itemLabel="#{tipoEvento.descricao}" />
 						</p:selectOneRadio>
 						<p:outputLabel />
-   
+
 					</p:column>
 					<p:separator></p:separator>
 					<br />
