cadastro de atendente novos filtros , ativo e inativo

--- a/WebContent/cadastro/cadConvenio.xhtml
+++ b/WebContent/cadastro/cadConvenio.xhtml
@@ -134,7 +134,9 @@
 											value="#{convenioBean.convenioModel.telefone}"/>
 									</div>
 
-								</div>
+									</div>
+									<p:commandButton immediate="true" value="Lista Map" actionListener="#{convenioBean.teste}" />
+									<p:commandButton immediate="true" value="Number" actionListener="#{convenioBean.teste1}" />
 							</p:panel>
 						</div>
 
