--- a/WebContent/cadastro/findEspecialidade.xhtml
+++ b/WebContent/cadastro/findEspecialidade.xhtml
@@ -148,7 +148,7 @@
 									<f:facet name="header">Excluir</f:facet>
 									<p:commandLink action="#{especialidadeBean.excluir}" update="table"
 										id="excluir" ajax="true" immediate="true">
-										<i class="fa fa-trash" aria-hidden="true"></i>
+										<i class="fa fa-trash"></i>
 										<f:setPropertyActionListener value="#{d}"
 											target="#{especialidadeBean.especialidadeModel}" />
 									</p:commandLink>
