--- a/WebContent/cadastro/findAtendente.xhtml
+++ b/WebContent/cadastro/findAtendente.xhtml
@@ -78,7 +78,7 @@
 					<div class="ui-g">
 						<div class="ui-g-12">
 							<h:panelGroup id="botoes">
-								<div class="ui-g-12 ui-lg-2">
+								<div class="ui-g-12 ui-lg-1">
 									<p:commandButton value="Incluir"
 										style="height:40px; background: greenyellow !important  ;   
 										background-color: greenyellow; 
@@ -87,23 +87,44 @@
 										action="#{atendenteBean.novo}" rendered="true"
 										immediate="true" icon="fa fa-plus" iconPos="right" />
 								</div>
-								<div class="ui-g-12 ui-lg-2">
+								<div class="ui-g-12 ui-lg-1">
 									<p:commandButton id="botaoEditar" value="Editar"
 										style="height:40px; background: lightskyblue !important  ;
 										   background-color: lightskyblue ;
 										   color:white !important;
-										   font-size:large;" immediate="true"
-										   action="#{atendenteBean.edita}"
+										   font-size:large;"
+										immediate="true" action="#{atendenteBean.edita}"
 										update="table, @form"
 										rendered="#{atendenteBean.atendenteModel.idAtendente > 0 }"
-										icon=" fa fa-pencil" iconPos="right" >
-										
-										<f:setPropertyActionListener value="#{d}" 
-								target="#{atendenteBean.atendenteModel}"/>
-										</p:commandButton>
+										icon=" fa fa-pencil" iconPos="right">
+
+										<f:setPropertyActionListener value="#{d}"
+											target="#{atendenteBean.atendenteModel}" />
+									</p:commandButton>
+								</div>
+								<div class="ui-g-12 ui-lg-1">
+									<p:commandButton id="botaoInativar" value="Desativar"
+										style="height:40px; background: rose !important  ;
+										   background-color: lightskyblue ;
+										   color:white !important;
+										   font-size:large;"
+										immediate="true" action="#{atendenteBean.inativar}"
+										update="table, @form"
+										rendered="#{atendenteBean.atendenteModel.idAtendente > 0 }">
+
+									</p:commandButton>
+								</div>
+								<div class="ui-g-12 ui-lg-3">
+									<p:selectOneRadio value="#{atendenteBean.campoBuscaAtivo}">
+										<f:selectItem itemLabel="Todos" itemValue="T" />
+										<f:selectItem itemLabel="Ativo" itemValue="A" />
+										<f:selectItem itemLabel="Inativo" itemValue="I" />
+										<p:ajax event="change" listener="#{atendenteBean.busca}"
+											update="table" />
+									</p:selectOneRadio>
 								</div>
 							</h:panelGroup>
-							<div class="ui-g-12 ui-lg-4">
+							<div class="ui-g-12 ui-lg-3">
 								<p:inputText value="#{atendenteBean.campoBuscaNome}"
 									placeholder="Buscar pelo Nome" id="inputNome"
 									style="height:40px; ">
@@ -128,55 +149,59 @@
 						</div>
 					</div>
 				</p:panel>
-				<p:panel> 
+				<p:panel>
 					<div class="ui-g">
-					<br/>
+						<br />
 						<p:dataTable value="#{atendenteBean.lstAtendente}" var="d"
 							styleClass="table.gridtable" rowKey="#{d.idAtendente}"
 							selectionMode="single" id="table" rows="10" paginator="true"
 							selection="#{atendenteBean.atendenteModel}">
 
-							<p:ajax event="rowSelect"
-								listener="#{atendenteBean.onRowSelect}"
+							<p:ajax event="rowSelect" listener="#{atendenteBean.onRowSelect}"
 								update="table,:form:botoes" />
 
 
 							<p:column headerText="Matricula" priority="1"
-								style="overflow: hidden;text-align: center; font-size: medium; width: 90px">
-								<a>#{d.idAtendente} <br />
-								</a>
+								style="overflow: hidden;text-align: center; font-size: large; width: 90px">
+								<p:outputLabel value="#{d.idAtendente}" /> 
 							</p:column>
 
 							<p:column headerText="Atendente" priority="1"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								<a>#{d.pessoa.pessoaNome} <br/> CPF -
-									#{d.pessoa.pessoaCPF} 
-								</a>
+								style="overflow: hidden;text-align: left; font-size: large">
+								<p:outputLabel value="#{d.pessoa.pessoaNome}" />
+								<br />
+								<p:outputLabel value=" CPF - #{d.pessoa.pessoaCPF}" />
+								<br />
+								<p:outputLabel value="#{d.pessoa.pessoaTelefonePrimario}" />
 							</p:column>
 
 							<p:column headerText="Endereço" priority="5"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								<a>#{d.pessoa.logradouro} <br />
-								</a>
+								style="overflow: hidden;text-align: left; font-size: large">
+								<p:outputLabel value="#{d.pessoa.logradouro} - " />
+								<p:outputLabel value="#{d.pessoa.cep}" />
+								<br />
+								<p:outputLabel value="#{d.pessoa.bairro}" />
 							</p:column>
-							<p:column headerText="Telefone" priority="5"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								<a>#{d.pessoa.pessoaTelefonePrimario} <br />
-								</a>
+							<p:column headerText="Status" priority="5"
+								style="overflow: hidden;text-align: center; font-size: large; width: 5%">
+								<p:outputLabel value="Ativo" rendered="#{d.ativo eq 'A'}"
+									style="color : green" />
+								<p:outputLabel value="Inativo" rendered="#{d.ativo eq 'I'}"
+									style="color : red" />
+
 							</p:column>
-							
-							<p:column style="width:50px" priority="4">
+
+							<!-- <p:column style="width:10%" priority="4">
 								<center>
 									<f:facet name="header">Excluir</f:facet>
-									<p:commandLink action="#{atendenteBean.excluir}"
-										update="table" id="excluir" ajax="true"
-										immediate="true">
+									<p:commandLink action="#{atendenteBean.excluir}" update="table"
+										id="excluir" ajax="true" immediate="true">
 										<i class="fa fa-trash" aria-hidden="true"></i>
 										<f:setPropertyActionListener value="#{d}"
 											target="#{atendenteBean.atendenteModel}" />
 									</p:commandLink>
 								</center>
-							</p:column>
+							</p:column> -->
 						</p:dataTable>
 					</div>
 				</p:panel>
