DatasUtils e Email Utils adicionados ao projeto , a cada agendamento um email é enviado ao paciente, somente para nível de informação

--- a/WebContent/cadastro/cadPaciente.xhtml
+++ b/WebContent/cadastro/cadPaciente.xhtml
@@ -188,7 +188,7 @@
 											value="Email: *" />
 
 										<p:inputText id="email" required="true" maxlength="100"
-											value="#{pacienteBean.pacienteModel.pessoa.pessoaEmail}"
+											value="#{pacienteBean.pacienteModel.email}"
 											requiredMessage="Informe o Email" />
 									</div>
 									<div class="ui-g-12 ui-lg-2">
